opam-version: "2.0"
version: "1.2"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "Public domain"
homepage: "https://github.com/ocaml-ppx/ppx_getenv"
bug-reports: "https://github.com/ocaml-ppx/ppx_getenv/issues"
dev-repo: "git://github.com/whitequark/ppx_getenv.git"
tags: [ "syntax" ]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "1.0"}
  "ocaml-migrate-parsetree" {>= "1.7.0"}
  "ounit2" {with-test}
]
synopsis: "A sample syntax extension using OCaml's new extension points API"
